open java.io to unit tests of utils module